[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aistudynow-qwenvl"                   # stable node id in the registry
version = "3.0.0"                            # bump this on every publish
description = "ComfyUI nodes for QwenVL (Qwen2.5-VL / Qwen3-VL): image caption, OCR, boxes, video summary."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Repository = "https://github.com/aistudynow/ComfyUI-QwenVL"
"Bug Tracker" = "https://github.com/aistudynow/ComfyUI-QwenVL/issues"

[tool.comfy]
PublisherId = "aistudynow"
PackageId = "ComfyUI-QwenVL"                 # keep if no package conflict; if conflict, make it unique (see note below)
DisplayName = "ComfyUI-QwenVL"
Description = "Qwen-VL custom nodes for image and video understanding with auto-download and low VRAM options."
Repository = "https://github.com/aistudynow/ComfyUI-QwenVL"
Icon = "https://raw.githubusercontent.com/aistudynow/ComfyUI-QwenVL/main/icon.png"
requires-comfyui = ">=0.3.0"

[tool.comfy.nodes]
aistudynow_QwenVL = "aistudynow_QwenVL:aistudynow_QwenVL"
aistudynow_QwenVL_Advanced = "aistudynow_QwenVL:aistudynow_QwenVL_Advanced"
aistudynow_SaveText = "aistudynow_QwenVL:aistudynow_SaveText"
